--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
-  "name": "tictactoe-render",
+  "name": "tictactoe-game",
   "version": "1.0.0",
+  "description": "Multiplayer Tic Tac Toe game with WebSocket support",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "keywords": [
+    "tic-tac-toe",
+    "websocket",
+    "multiplayer",
+    "game"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "ws": "^8.13.0",
     "nanoid": "^4.0.0",
     "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": "18.x"
